Add events pagination
