# server/common/swagger/Api.json
@@ -2557,6 +2557,68 @@
             }
          }
       },
+      "/events/{interviewId}/sort/{page}/{n}/{sortItem}/{sortOrder}": {
+         "get": {
+            "tags": [
+               "Events"
+            ],
+            "parameters": [
+               {
+                  "name": "authorization",
+                  "in": "header",
+                  "description": "Bearer <auth_token>",
+                  "required": true,
+                  "type": "string"
+               },
+               {
+                  "name": "interviewId",
+                  "in": "path",
+                  "required": true,
+                  "description": "The ID of the interview to get events for",
+                  "type": "string"
+               },
+               {
+                  "name": "page",
+                  "in": "path",
+                  "required": true,
+                  "description": "Page number of request",
+                  "type": "number"
+               },
+               {
+                  "name": "n",
+                  "in": "path",
+                  "required": true,
+                  "description": "Page number of request",
+                  "type": "number"
+               },
+               {
+                  "name": "sortItem",
+                  "in": "path",
+                  "required": true,
+                  "description": "Item JSON key to sort by",
+                  "type": "string"
+               },
+               {
+                  "name": "sortOrder",
+                  "in": "path",
+                  "required": true,
+                  "description": "Sort order",
+                  "type": "number"
+               }
+            ],
+            "responses": {
+               "200": {
+                  "description": "Event Submitted"
+               },
+               "400": {
+                  "description": "interviewId is not a valid objectId"
+               },
+               "500": {
+                  "description": "Server Error!"
+               }
+            }
+         }
+      },
       "/events/started": {
          "post": {
             "tags": [
